Further benchmark improvement